--- a/templates/hashtags/components/hashtag_items.html
+++ b/templates/hashtags/components/hashtag_items.html
@@ -3,6 +3,10 @@
     {% for hashtag in hashtags %}
     <div
         class="block w-full p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 transition-all duration-300 hover:shadow-lg hover:scale-[1.02]">
+        <div class="flex mb-4">
+            <input id="checkbox-{{ hashtag.id }}" name="selected_hashtags" value="{{ hashtag.id }}" type="checkbox"
+                class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+        </div>
         <div class="flex justify-between items-start mb-2">
             <div class="flex items-center">
                 <span
@@ -182,8 +186,7 @@
 </div>
 {% else %}
 <div id="alert-additional-content-5"
-    class="p-4 border border-gray-300 rounded-lg bg-gray-50 dark:border-gray-600 dark:bg-gray-800 shadow-md"
-    role="alert">
+    class="p-4 border border-gray-300 rounded-lg bg-gray-50 dark:border-gray-600 dark:bg-gray-800" role="alert">
     <div class="flex items-center">
         <svg class="shrink-0 w-4 h-4 me-2 dark:text-gray-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
             fill="currentColor" viewBox="0 0 20 20">
@@ -191,21 +194,32 @@
                 d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
         </svg>
         <span class="sr-only">Info</span>
-        <h3 class="text-lg font-medium text-gray-800 dark:text-gray-300">No Hashtags</h3>
+        <h3 class="text-lg font-medium text-gray-800 dark:text-gray-300">No Targets Found</h3>
     </div>
     <div class="mt-2 mb-4 text-sm text-gray-800 dark:text-gray-300">
-        You haven't added any Hashtags yet. Click the button below to add your first Hashtag.
-    </div>
-    <div class="flex">
-        <button type="button" data-modal-target="addHashtagModal" data-modal-toggle="addHashtagModal"
-            class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-xs px-3 py-1.5 me-2 text-center inline-flex items-center dark:bg-gray-600 dark:hover:bg-gray-500 dark:focus:ring-gray-800">
-            <svg class="me-2 h-3 w-3 dark:text-gray-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                fill="currentColor" viewBox="0 0 20 14">
-                <path
-                    d="M10 0C4.612 0 0 5.336 0 7c0 1.742 3.546 7 10 7 6.454 0 10-5.258 10-7 0-1.664-4.612-7-10-7Zm0 10a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z" />
-            </svg>
-            Add Hashtag
-        </button>
+        {% if active_filters %}
+        No hashtags match your selected filters. Try adjusting your filters or clear them to see all hashtags.
+        <div class="flex mt-4">
+            <button type="button" hx-get="{% url 'hashtags:filter_hashtags' %}" hx-target="#hashtag-list"
+                onclick="clearAllFilters()"
+                class="text-gray-800 bg-transparent border border-gray-800 hover:bg-gray-900 hover:text-white focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-xs px-3 py-1.5 text-center dark:border-gray-600 dark:hover:bg-gray-600 dark:focus:ring-gray-800 dark:text-gray-300 dark:hover:text-white">
+                Clear Filters
+            </button>
+        </div>
+        {% else %}
+        You haven't added any hashtags yet. Click the button below to add your first hashtag.
+        <div class="flex mt-4">
+            <button type="button" data-modal-target="addHashtagModal" data-modal-toggle="addHashtagModal"
+                class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-xs px-3 py-1.5 me-2 text-center inline-flex items-center dark:bg-gray-600 dark:hover:bg-gray-500 dark:focus:ring-gray-800">
+                <svg class="me-2 h-3 w-3 dark:text-gray-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                    fill="currentColor" viewBox="0 0 20 14">
+                    <path
+                        d="M10 0C4.612 0 0 5.336 0 7c0 1.742 3.546 7 10 7 6.454 0 10-5.258 10-7 0-1.664-4.612-7-10-7Zm0 10a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z" />
+                </svg>
+                Add Target
+            </button>
+        </div>
+        {% endif %}
     </div>
 </div>
 {% endif %}
