--- a/templates/dashboard/components/navigation/sidebar.html
+++ b/templates/dashboard/components/navigation/sidebar.html
@@ -101,7 +101,7 @@
             </li>
             <li>
                 <a href="{% url 'settings:settings' %}"
-                    class="flex items-center p-2 text-base text-gray-900 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700 ">
+                    class="flex items-center p-2 text-base text-gray-900  {% if request.resolver_match.url_name == 'settings' %}bg-gray-100 dark:bg-gray-700{% endif %} rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700 ">
                     <svg class="w-6 h-6 {% if request.resolver_match.url_name == 'settings' %}text-green-500 dark:text-green-500{% else %}text-gray-500{% endif %} transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white"
                         fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                         <path clip-rule="evenodd" fill-rule="evenodd"
