--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -156,7 +156,7 @@
 
                                     <div class="flex flex-col md:flex-row gap-8">
                                         <!-- Profile Picture Column -->
-                                        <div class="flex-shrink-0 flex flex-col items-start mb-6 md:mb-0">
+                                        <div class="flex-shrink-0 flex flex-col items-start md:mb-0">
                                             <img class="rounded-lg w-28 h-28 mb-4"
                                                 src="https://flowbite-admin-dashboard.vercel.app/images/users/bonnie-green-2x.png"
                                                 alt="Profile picture">
@@ -176,35 +176,35 @@
                                         </div>
 
                                         <!-- Form Column -->
-                                        <form action="#" class="flex-1">
+                                        <form action="" class="flex-1">
                                             <div class="grid grid-cols-1 sm:grid-cols-6 gap-4 sm:gap-6">
                                                 <div class="col-span-1 sm:col-span-3">
                                                     <label for="first-name"
                                                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Name</label>
                                                     <input type="text" name="first-name" id="first-name"
-                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                                                        placeholder="Bonnie" required="">
+                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                                                        placeholder="Bonnie" value="" required="">
                                                 </div>
                                                 <div class="col-span-1 sm:col-span-3">
                                                     <label for="last-name"
                                                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Company
                                                         Name</label>
                                                     <input type="text" name="last-name" id="last-name"
-                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                                                         placeholder="Green" required="">
                                                 </div>
                                                 <div class="col-span-1 sm:col-span-3">
                                                     <label for="country"
                                                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Address</label>
                                                     <input type="text" name="country" id="country"
-                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                                                         placeholder="United States" required="">
                                                 </div>
                                                 <div class="col-span-1 sm:col-span-3">
                                                     <label for="city"
                                                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone</label>
                                                     <input type="text" name="city" id="city"
-                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                                                         placeholder="e.g. San Francisco" required="">
                                                 </div>
                                                 <div class="col-span-1 sm:col-span-3">
@@ -212,7 +212,7 @@
                                                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Years
                                                         in business</label>
                                                     <input type="text" name="address" id="address"
-                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                                                         placeholder="e.g. California" required="">
                                                 </div>
                                                 <div class="col-span-1 sm:col-span-3">
@@ -220,7 +220,7 @@
                                                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">License
                                                         number</label>
                                                     <input type="email" name="email" id="email"
-                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                                                         placeholder="example@company.com" required="">
                                                 </div>
                                                 <div class="col-span-1 sm:col-span-3">
@@ -228,45 +228,17 @@
                                                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">License
                                                         state</label>
                                                     <input type="number" name="phone-number" id="phone-number"
-                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                                                         placeholder="e.g. +(12)3456 789" required="">
                                                 </div>
                                                 <div class="col-span-1 sm:col-span-3">
                                                     <label for="birthday"
                                                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Specialization</label>
                                                     <input type="number" name="birthday" id="birthday"
-                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                                                         placeholder="15/08/1990" required="">
                                                 </div>
-                                                <div class="col-span-1 sm:col-span-3">
-                                                    <label for="organization"
-                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Organization</label>
-                                                    <input type="text" name="organization" id="organization"
-                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                                                        placeholder="Company Name" required="">
-                                                </div>
-                                                <div class="col-span-1 sm:col-span-3">
-                                                    <label for="role"
-                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Role</label>
-                                                    <input type="text" name="role" id="role"
-                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                                                        placeholder="React Developer" required="">
-                                                </div>
-                                                <div class="col-span-1 sm:col-span-3">
-                                                    <label for="department"
-                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Department</label>
-                                                    <input type="text" name="department" id="department"
-                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                                                        placeholder="Development" required="">
-                                                </div>
-                                                <div class="col-span-1 sm:col-span-3">
-                                                    <label for="zip-code"
-                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Zip/postal
-                                                        code</label>
-                                                    <input type="number" name="zip-code" id="zip-code"
-                                                        class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                                                        placeholder="123456" required="">
-                                                </div>
+
                                                 <div class="col-span-1 sm:col-full">
                                                     <button
                                                         class="text-white bg-green-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
